# constexpr-raytracer

./: CMakeLists.txt
examples/: CMakeLists.txt  Clock.cpp  FiringProjectiles.cpp  SphereSilhouette.cpp
src/: CMakeLists.txt  Canvas.hpp  Color.hpp  Math.hpp  Matrix.hpp  MatrixTransformations.hpp  Ppm.hpp  Ray.hpp  Shading.hpp  Shape.hpp  StaticVector.hpp  Tuple.hpp
test/: CMakeLists.txt  CanvasTests.cpp  MatrixTests.cpp  MatrixTransformationsTests.cpp  RayTests.cpp  SphereTests.cpp  StaticVectorTests.cpp  TupleTests.cpp
